# Houdini_Gaussian_Splatter_Bake

./: README.md  pyproject.toml
docs/: spec_v0.1_ja.md
examples/: config.sample.json
src/pyro2gs/: __init__.py  cli.py  config.py  convert.py  exporter.py  gui.py  lookdev.py  pipeline.py  types.py  vdb_reader.py
tests/: test_pipeline.py
