[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyro2gs"
version = "0.1.0"
description = "Standalone Houdini Pyro VDB to Gaussian Splat point converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
vdb = ["pyopenvdb"]

[project.scripts]
pyro2gs = "pyro2gs.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
